Fix letterspacing in  dropdown-create

--- a/frontend/src/assets/styles/cmps/_dropdown-create.scss
+++ b/frontend/src/assets/styles/cmps/_dropdown-create.scss
@@ -92,7 +92,7 @@
     h3 {
         color: $clr12;
         font-weight: normal;
-        letter-spacing: rem(0.5px);
+        letter-spacing: rem(0.2px);
         font-size: rem(14px);
         text-align: center;
         padding: 1em;
